# alexTryCUDA

./: README.md  hello.cu
GEMM_Bench/: README.md  gemm_bench.cu
GEMM_cuBLAS/: CMakeLists.txt  cublasGemmEx.cu  cublasSgemm.cu
HelloWorld/: hello.md  hello.qdrep
Multi-Streams/: Addarray_ms.py
QueryGPU/: QueryGPU.cu
matrixMul/: Makefile  MatrixMul CUDA example.md  matrixMul.qdrep  matrixMul.sqlite
